Prevent vertical scrollbar from appearing on page load and when changing zoom levels within the browser

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   letter-spacing: -1px;
+  overflow: hidden;
 }
 
 button {
